[package]
name = "login-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono", "rustls"] }
chrono = "0.4"
bb8 = "0.9.1"
bb8-tiberius = "0.16.0"

[build-dependencies]
winres = "0.1"
